# profiles-sync-dbt

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
macros/: _aaron_is_dumb.sql  col_table.sql  dateadd2.sql  datetime_univ.sql  last_observed_trait.sql  last_observed_trait_v2.sql  trait_partition.sql  trait_partition_first_value.sql
models/profile_materializations/: external_id_mapping.sql  id_graph.sql  profile_traits.sql  profile_traits_v2.sql  profile_traits_v2_incrementaltest.sql  profile_traits_v3.sql  profile_traits_via_updates.sql  schema.yml
models/troubleshooting/: identifies_parse.sql
